--- a/basic_website/index.html
+++ b/basic_website/index.html
@@ -37,8 +37,8 @@ a:hover {
 </style>
   </head>
   <body>
-    <div id="button"><a href="my-webpage.html">My Webpage</a></div>
-    <div id="button2"><a href="my-webpage-grid.html">My Grid Webpage</a></div>
+    <div id="button"><a href="Html & Css/my-webpage.html">My Webpage</a></div>
+    <div id="button2"><a href="Grid Web/my-webpage-grid.html">My Grid Webpage</a></div>
 
   </body>
 </html>
