--- a/basic_website/Grid Web/my-webpage-grid.html
+++ b/basic_website/Grid Web/my-webpage-grid.html
@@ -16,20 +16,20 @@
           <h1>Seanego</h1>
         </div>
         <!--First Column-->
-        <div class="col-6">
+        <div class="col-6 table">
           <img src="images/Table.png" alt="Table Mountain">
         </div>
       </div>
         <!--Row2-->
         <div class="row">
           <!--First Column-->
-          <div class="col-5"
+          <div class="col-5 paris">
           <h2>Which City?</h2>
           <img src="images/Paris.png" alt="Paris">
         </div>
         <!--Second Column-->
         <div class="col-7">
-            <h3>Paris</h3>
+            <h4>Paris</h4>
             <p>Paris has been voted the most beautiful city in the world
       in a new ranking. Travel website Flight Network compiled the
       list of 50 cities by surveying more than 1,000 travel writers
@@ -42,9 +42,9 @@
         </div>
         <!--Row3-->
         <div class="row">
-        <div class="col-12">
+        <div class="col-12 langtable">
           <table>
-            <h3>A Foreign Language</h3>
+            <h2>A Foreign Language</h2>
       <h5>The Language I Choose Is French</h5>
       <h6>I would love to learn the language because french sounds romantic.</h6>
       <tr>
@@ -69,46 +69,50 @@
         <!--Row4-->
         <div class="row">
           <!--Heading-->
-            <h3 class="place">Historical Places In Cape Town</h3>
+          <div class="col-12">
+            <h3 class="historical">Historical Places In Cape Town</h3>
+          </div>
+        </div>
+        <div class="row">
           <!--First Coloumn-->
           <div class="col-4">
+            <h4 class="six">Bo-Kaap</h4>
             <div class="col-6">
-          <h4>Bo-Kaap</h4>
           <ul>
             <li>Beautiful colorfull houses</li>
             <li>The Nurul Islam Mosque, established in 1844</li>
             <li>56.9% of its population identify as Muslim</li>
           </ul>
         </div>
-        <div class="col-6>"
+        <div class="col-6">
           <img src="images/Bokaap.png" alt="Bokaap">
         </div>
       </div>
         <!--Second Coloumn-->
         <div class="col-4">
+          <h4 class="six">City Hall</h4>
           <div class="col-6">
-          <h4>City Hall</h4>
           <ul>
             <li>It was built in 1905.</li>
             <li>In 1990 Nelson Mandela made his first public speech there.</li>
             <li>Thats were the Lights Switch On Festive is help.</li>
           </ul>
         </div>
-        <div class="col-6">
+        <div class="col-6 city hall">
           <img src="images/city hall.png" alt="City hall">
         </div>
       </div>
         <!--Third Coloumn-->
         <div class="col-4">
+          <h4 class="six">District Museum Six</h4>
           <div class="col-6">
-          <h4>District six Museum</h4>
           <ul>
             <li>The floor of the museum is coverd with notes.</li>
             <li>It was found in 1994</li>
             <li>Its now a memorial for 60 000 inhabitans races moved during apartheid</li>
           </ul>
         </div>
-        <div class="col-6">
+        <div class="col-6 District6">
           <img src="images/District six.png" alt="District Six Museum">
         </div>
     </div>
