--- a/basic_website/Grid Web/my-webpage-grid.html
+++ b/basic_website/Grid Web/my-webpage-grid.html
@@ -44,8 +44,8 @@
         <div class="row">
         <div class="col-12 langtable">
           <table>
-            <h2>A Foreign Language</h2>
-      <h5>The Language I Choose Is French</h5>
+            <h2 class="forlang">A Foreign Language</h2>
+      <h5>The Language I Choose Is French.</h5>
       <h6>I would love to learn the language because french sounds romantic.</h6>
       <tr>
         <th>English Phrase</th>
