--- a/basic_website/Grid Web/my-webpage-grid.html
+++ b/basic_website/Grid Web/my-webpage-grid.html
@@ -11,8 +11,8 @@
       <!--Row1-->
         <div class="row">
           <!--First Column-->
-          <div class="col-6">
-          <h1>Tebogo</h1>
+          <div class="col-6 heading">
+          <h1 class="H1">Tebogo</h1>
           <h1>Seanego</h1>
         </div>
         <!--First Column-->
@@ -24,7 +24,7 @@
         <div class="row">
           <!--First Column-->
           <div class="col-5 paris">
-          <h2>Which City?</h2>
+          <h2 class="H2">Which City?</h2>
           <img src="images/Paris.png" alt="Paris">
         </div>
         <!--Second Column-->
@@ -45,7 +45,7 @@
         <div class="col-12 langtable">
           <table>
             <h2 class="forlang">A Foreign Language</h2>
-      <h5>The Language I Choose Is French.</h5>
+      <h5>French.</h5>
       <h6>I would love to learn the language because french sounds romantic.</h6>
       <tr>
         <th>English Phrase</th>
@@ -77,42 +77,42 @@
           <!--First Coloumn-->
           <div class="col-4">
             <h4 class="six">Bo-Kaap</h4>
-            <div class="col-6">
+            <div class="col-6 small">
           <ul>
             <li>Beautiful colorfull houses</li>
             <li>The Nurul Islam Mosque, established in 1844</li>
             <li>56.9% of its population identify as Muslim</li>
           </ul>
         </div>
-        <div class="col-6">
+        <div class="col-6 small">
           <img src="images/Bokaap.png" alt="Bokaap">
         </div>
       </div>
         <!--Second Coloumn-->
         <div class="col-4">
           <h4 class="six">City Hall</h4>
-          <div class="col-6">
+          <div class="col-6 small1">
           <ul>
             <li>It was built in 1905.</li>
             <li>In 1990 Nelson Mandela made his first public speech there.</li>
             <li>Thats were the Lights Switch On Festive is help.</li>
           </ul>
         </div>
-        <div class="col-6 city hall">
+        <div class="col-6 small2">
           <img src="images/city hall.png" alt="City hall">
         </div>
       </div>
         <!--Third Coloumn-->
         <div class="col-4">
           <h4 class="six">District Museum Six</h4>
-          <div class="col-6">
+          <div class="col-6 small">
           <ul>
             <li>The floor of the museum is coverd with notes.</li>
             <li>It was found in 1994</li>
             <li>Its now a memorial for 60 000 inhabitans races moved during apartheid</li>
           </ul>
         </div>
-        <div class="col-6 District6">
+        <div class="col-6 small">
           <img src="images/District six.png" alt="District Six Museum">
         </div>
     </div>
