--- a/basic_website/Html & Css/my-webpage.html
+++ b/basic_website/Html & Css/my-webpage.html
@@ -39,7 +39,7 @@
         <div class="box box5">
           <table>
             <h3>A Foreign Language</h3>
-      <h5>The Language I Choose Is French.</h5>
+      <h5>French.</h5>
       <h6>I would love to learn the language because french sounds romantic.</h6>
       <tr>
         <th>English Phrase</th>
