--- a/basic_website/Html & Css/my-webpage.html
+++ b/basic_website/Html & Css/my-webpage.html
@@ -38,8 +38,7 @@
         <!--Block5-->
         <div class="box box5">
           <table>
-            <h3>A Foreign Language</h3>
-      <h5>French.</h5>
+            <h6>A Foreign Language</h6>
       <h6>I would love to learn the language because french sounds romantic.</h6>
       <tr>
         <th>English Phrase</th>
@@ -61,11 +60,11 @@
         </div>
         <!--Block6-->
         <div class="box box6">
-            <h3 class="place">Historical Places In Cape Town</h3>
+            <h6>Historical Places In Cape Town</h6>
         </div>
         <!--Block7-->
         <div class="box box7">
-          <h4>Bo-Kaap</h4>
+          <h4 class="Bokaap">Bo-Kaap</h4>
           <ul>
             <li>Beautiful colorfull houses</li>
             <li>The Nurul Islam Mosque, established in 1844</li>
@@ -78,7 +77,7 @@
         </div>
         <!--Block9-->
         <div class="box box9">
-          <h4>City Hall</h4>
+          <h4 class="city">City Hall</h4>
           <ul>
             <li>It was built in 1905.</li>
             <li>In 1990 Nelson Mandela made his first public speech there.</li>
@@ -91,7 +90,7 @@
         </div>
         <!--Block11-->
         <div class="box box11">
-          <h4>District six Museum</h4>
+          <h4 class="District">District six Museum</h4>
           <ul>
             <li>The floor of the museum is coverd with notes.</li>
             <li>It was found in 1994</li>
