--- a/bootcamp-tests/index.html
+++ b/bootcamp-tests/index.html
@@ -16,8 +16,13 @@
         var assert = chai.assert;
     </script>
 
-    <script src="../test/tests.js" charset="utf-8"></script>
-
+    <script src="./test/tests.js" charset="utf-8"></script>
+    <script src="./functions/greet.js" charset="utf-8"></script>
+    <script src="./test/greet.test.js" charset="utf-8"></script>
+    <script src="./functions/isFromBellville.js" charset="utf-8"></script>
+    <script src="./test/isFromBellville.test.js" charset="utf-8"></script>
+    <script src="./functions/regCheck.js" charset="utf-8"></script>
+    <script src="./test/regCheck.test.js" charset="utf-8"></script>
     <script>
         mocha.checkLeaks();
         mocha.run();
