--- a/bootcamp-tests/index.html
+++ b/bootcamp-tests/index.html
@@ -23,6 +23,16 @@
     <script src="./test/isFromBellville.test.js" charset="utf-8"></script>
     <script src="./functions/regCheck.js" charset="utf-8"></script>
     <script src="./test/regCheck.test.js" charset="utf-8"></script>
+    <script src="./functions/countRegNumber.js" charset="utf-8"></script>
+    <script src="./test/countRegNumber.test.js" charset="utf-8"></script>
+    <script src="./functions/isWeekday.js" charset="utf-8"></script>
+    <script src="./test/isWeekday.test.js" charset="utf-8"></script>
+    <script src="./functions/yearsAgo.js" charset="utf-8"></script>
+    <script src="./test/yearsAgo.test.js" charset="utf-8"></script>
+    <script src="./functions/countAllPaarl.js" charset="utf-8"></script>
+    <script src="./test/countAllPaarl.test.js" charset="utf-8"></script>
+    <script src="./functions/countAllFromTown.js" charset="utf-8"></script>
+    <script src="./test/countAllFromTown.test.js" charset="utf-8"></script>
     <script>
         mocha.checkLeaks();
         mocha.run();
