--- a/bootcamp-tests/index.html
+++ b/bootcamp-tests/index.html
@@ -33,6 +33,8 @@
     <script src="./test/countAllPaarl.test.js" charset="utf-8"></script>
     <script src="./functions/countAllFromTown.js" charset="utf-8"></script>
     <script src="./test/countAllFromTown.test.js" charset="utf-8"></script>
+    <script src="./functions/transportFee.js" charset="utf-8"></script>
+    <script src="./test/transportFee.test.js" charset="utf-8"></script>
     <script>
         mocha.checkLeaks();
         mocha.run();
