--- a/bootcamp-tests/index.html
+++ b/bootcamp-tests/index.html
@@ -35,6 +35,11 @@
     <script src="./test/countAllFromTown.test.js" charset="utf-8"></script>
     <script src="./functions/transportFee.js" charset="utf-8"></script>
     <script src="./test/transportFee.test.js" charset="utf-8"></script>
+    <script src="./functions/totalPhoneBill.js" charset="utf-8"></script>
+    <script src="./test/totalPhoneBill.test.js" charset="utf-8"></script>
+    <script src="./functions/fromWhere.js" charset="utf-8"></script>
+    <script src="./test/fromWhere.test.js" charset="utf-8"></script>
+    </script>
     <script>
         mocha.checkLeaks();
         mocha.run();
