--- a/bootcamp-tests/index.html
+++ b/bootcamp-tests/index.html
@@ -15,6 +15,11 @@
         mocha.setup('bdd');
         var assert = chai.assert;
     </script>
+    <script>
+        mocha.setup({
+        globals: ['*']
+        });
+    </script>
 
     <script src="./test/tests.js" charset="utf-8"></script>
     <script src="./functions/greet.js" charset="utf-8"></script>
@@ -39,6 +44,10 @@
     <script src="./test/totalPhoneBill.test.js" charset="utf-8"></script>
     <script src="./functions/fromWhere.js" charset="utf-8"></script>
     <script src="./test/fromWhere.test.js" charset="utf-8"></script>
+    <script src="./functions/findItemsOver20.js" charset="utf-8"></script>
+    <script src="./test/findItemsOver20.test.js" charset="utf-8"></script>
+    <script src="./functions/mostProfitableDepartment.js" charset="utf-8"></script>
+    <script src="./test/mostProfitableDepartment.test.js" charset="utf-8"></script>
     </script>
     <script>
         mocha.checkLeaks();
