--- a/bootcamp-tests/index.html
+++ b/bootcamp-tests/index.html
@@ -46,6 +46,8 @@
     <script src="./test/fromWhere.test.js" charset="utf-8"></script>
     <script src="./functions/findItemsOver20.js" charset="utf-8"></script>
     <script src="./test/findItemsOver20.test.js" charset="utf-8"></script>
+    <script src="./functions/findItemsOver.js" charset="utf-8"></script>
+    <script src="./test/findItemsOver.test.js" charset="utf-8"></script>
     <script src="./functions/mostProfitableDepartment.js" charset="utf-8"></script>
     <script src="./test/mostProfitableDepartment.test.js" charset="utf-8"></script>
     </script>
