--- a/dom_unit_testing_linked/dom_logic/index.html
+++ b/dom_unit_testing_linked/dom_logic/index.html
@@ -231,8 +231,11 @@
     </div>
 <script src="../functions/calculate-bill.js"></script>    
     <script src="js/calculate-bill.js" charset="utf-8"></script>
+    <script src="../functions/text-bill.js" charset="utf-8"></script>
     <script src="js/text-bill.js" charset="utf-8"></script>
+    <script src="../functions/radio-bill.js"></script>
     <script src="js/radio-bill.js" charset="utf-8"></script>
+    <script src="../functions/settings-bill.js"></script>
     <script src="js/settings-bill.js" charset="utf-8"></script>
   </body>
 </html>
