--- a/greetings/dom_logic/index.html
+++ b/greetings/dom_logic/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="row center">
         <div class="col-12">
-            <h1 id="displayName">Greet Me!!!</h1>
+            <h1 id="displayName">Please Enter Your Name</h1>
         </div>
 
     </div>
@@ -75,5 +75,6 @@
         </div>
   
 </body>
-<script src="./greet.js"></script>
+<script src="../function/greet.js"></script>
+<script src="../dom_logic/greet.js"></script>
 </html>
