--- a/registration_numbers/dom_logic/index.html
+++ b/registration_numbers/dom_logic/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,14 @@
     <link rel="stylesheet" href="./registration_number.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="row center">
         <div class="col-12" id="p1">
 
 
-            <p>Hello and welcome!Enter your registration number in the textbox below ,hit ADD to ADD registration number! Choose a town and click on SHOW to see all registration numbers from that area.</p>
+            <p>Hello and welcome!Enter your registration number in the textbox below ,hit ADD to ADD registration
+                number! Choose a town and click on SHOW to see all registration numbers from that area.</p>
         </div>
     </div>
     <div class="row center">
@@ -26,7 +29,9 @@
 
         <div class="col-6 center">
             <form id="form1" action="" onsubmit="return submitForm();">
-                <input id="inputBox" type="console.text" placeholder="Format: CA 123 123 or CA 123-123 or CA 123123" pattern="([a-zA-Z]{2} [0-9]{3}-[0-9]{3})|([a-zA-Z]{2} [0-9]{3} [0-9]{3})|([a-zA-Z]{2} [0-9]{3}[0-9]{3})" title="Please enter plates from CA/CJ/CY/CL" >
+                <input id="inputBox" type="console.text" placeholder="Format: CA 123 123 or CA 123-123 or CA 123123"
+                    pattern="([a-zA-Z]{2} [0-9]{3}-[0-9]{3})|([a-zA-Z]{2} [0-9]{3} [0-9]{3})|([a-zA-Z]{2} [0-9]{3}[0-9]{3})"
+                    title="Please enter plates from CA/CJ/CY/CL">
             </form>
         </div>
         <div class="col-3"></div>
@@ -34,13 +39,13 @@
     <div class="row center">
         <!--            <div class="col-4"></div>-->
         <div class=" col-12 radio-toolbar">
-            <input type="radio" name="radioLang" value="Cape Town" id="1">
+            <input type="radio" name="radioTown" value="CA" id="1" onclick="RemoveHtmlElement()">
             <label for="1"> Cape Town</label>
-            <input type="radio" name="radioLang" value="Paarl" id="2">
+            <input type="radio" name="radioTown" value="CJ" id="2" onclick="RemoveHtmlElement()">
             <label for="2">Paarl</label>
-            <input type="radio" name="radioLang" value="Bellville" id="3">
+            <input type="radio" name="radioTown" value="CY" id="3" onclick="RemoveHtmlElement()">
             <label for="3">Bellville</label>
-            <input type="radio" name="radioLang" value="Stellenbosch" id="4">
+            <input type="radio" name="radioTown" value="CL" id="4" onclick="RemoveHtmlElement()">
             <label for="4">Stellenbosch</label>
         </div>
         <!--            <div class="col-4"></div>-->
@@ -52,10 +57,10 @@
     <div class="row center ">
         <div class="col-6" id="counterAndResetBox">
             <p class="">
-                <strong>Registration Number: &nbsp;
-                    <span id="countNumber">No Reg-Number Registerd Yet</span>
+                <strong>Click Reset To Clear Plate Register: &nbsp;
+                    <!-- <span id="countNumber">No Reg-Number Registerd Yet</span> -->
                 </strong>
-            </p> 
+            </p>
             <button id="resetBtn">Reset</button>
         </div>
         <div class="col-6" id="addBox">
@@ -74,14 +79,20 @@
             </button>
         </div>
         <div class="col-12 center" id="addBox">
-            <button id="addBtn" type="submit" form="form1" value="Submit">
+            <button id="showBtn" type="submit">
                 <strong>SHOW</strong>
             </button>
+            <button id="showAll" type="submit">
+                <strong>SHOW ALL</strong>
+            </button>
         </div>
-        </div>
-        
-  
+    </div>
+    <div id="container">
+        <div id="dvTable"></div>
+    </div>
+
 </body>
 <script src="../function/registration_number.js"></script>
 <script src="../dom_logic/registration_number.js"></script>
+
 </html>
