--- a/handlebars-intro/index.html
+++ b/handlebars-intro/index.html
@@ -5,12 +5,14 @@
     <title></title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
     <script type="text/x-template" class="userTemplate">
+        {{#each users}}
         <tr>
           <td>{{username}}</td>
           <td>{{firstName}}</td>
           <td>{{lastName}}</td>
           <td>{{email}}</td>
         </tr>
+        {{/each}}
     </script>
   </head>
   <body>
