--- a/handlebars templates/registration_numbers/dom_logic/index.html
+++ b/handlebars templates/registration_numbers/dom_logic/index.html
@@ -49,10 +49,10 @@
             <!--            <div class="col-4"></div>-->
          </div>
          <div class="row center ">
-            <div class="col-6" id="counterAndResetBox">
+            <div class="col-6 center" id="counterAndResetBox">
                <p class="">
                   <strong>
-                     Click Reset To Clear Plate Register: &nbsp;
+                    Clear Plate Register: &nbsp;
                      <!-- <span id="countNumber">No Reg-Number Registerd Yet</span> -->
                   </strong>
                </p>
@@ -83,6 +83,11 @@
          </fieldset>
       </div>
       <!--END OF SEPARATION-->
+      <!---=============================================================================================-->
+      <!---=============================================================================================-->
+      <!---=============================================================================================-->
+      <!---=============================================================================================-->
+      <!---=============================================================================================-->
       <!--NEW BEGINNING SEPARATION-->
       <div class="col-6 center">
          <div class="row center">
@@ -116,10 +121,10 @@
             <!--            <div class="col-4"></div>-->
          </div>
          <div class="row center ">
-            <div class="col-6" id="counterAndResetBox">
+            <div class="col-6 centre" id="counterAndResetBox">
                <p class="">
                   <strong>
-                     Click Reset To Clear Plate Register: &nbsp;
+                     Clear Plate Register: &nbsp;
                      <!-- <span id="countNumber">No Reg-Number Registerd Yet</span> -->
                   </strong>
                </p>
