--- a/handlebars templates/registration_numbers/dom_logic/index.html
+++ b/handlebars templates/registration_numbers/dom_logic/index.html
@@ -16,10 +16,12 @@
          </div>
       </div>
       <!---Separation--->
+      <!---Separation--->
+      <!---Separation--->
       <div class ="row center">
       <div class ="col-6 center">
          <div class="row center">
-            <div class="col-12">
+            <div class="col-12 center">
                <h1 id="displayName">Please enter registration number</h1>
             </div>
          </div>
@@ -80,8 +82,8 @@
             <div id="container">
                <div id="dvTable"></div>
             </div>
-         </fieldset>
       </div>
+   </fieldset>
       <!--END OF SEPARATION-->
       <!---=============================================================================================-->
       <!---=============================================================================================-->
@@ -90,6 +92,8 @@
       <!---=============================================================================================-->
       <!--NEW BEGINNING SEPARATION-->
       <div class="col-6 center">
+         <fieldset>
+            <legend>Template Widget</legend>
          <div class="row center">
             <div class="col-12">
                <h1 id="displayName">Please enter registration number</h1>
@@ -98,8 +102,8 @@
          <div class="row center">
             <div class="col-3"></div>
             <div class="col-6 center">
-               <form id="form1" action="" onsubmit="return submitForm();">
-                  <input id="inputBox" type="console.text" placeholder="Format: CA 123 123 or CA 123-123 or CA 123123"
+               <form id="form12" action="" onsubmit="return submitForm2();">
+                  <input id="inputBox2" type="console.text" placeholder="Format: CA 123 123 or CA 123-123 or CA 123123"
                      pattern="([a-zA-Z]{2} [0-9]{3}-[0-9]{3})|([a-zA-Z]{2} [0-9]{3} [0-9]{3})|([a-zA-Z]{2} [0-9]{3}[0-9]{3})"
                      title="Enter plates from CA/CJ/CY/CL only and should not exceeds 10 characters">
                </form>
@@ -130,14 +134,9 @@
                </p>
                <button id="resetBtn">Reset</button>
             </div>
-            <div class="col-6" id="addBox">
-               <!-- <button id="addBtn" type="submit" form="form1" value="Submit">
-                  <strong>reg!</strong>
-                  </button> -->
-            </div>
          </div>
          <div class="row center">
-            <button id="addBtn" type="submit" form="form1" value="Submit">
+            <button id="addBtn2" type="submit" form="form12" value="Submit">
             <strong>ADD</strong>
             </button>
             <button id="showBtn" type="submit">
@@ -153,6 +152,7 @@
                <div id="dvTable"></div>
             </div>
          </fieldset>
+      </fieldset>
       </div>
       <!--END OF SEPARATION-->
       </div>
