--- a/handlebars templates/registration_numbers/dom_logic/index.html
+++ b/handlebars templates/registration_numbers/dom_logic/index.html
@@ -20,6 +20,8 @@
       <!---Separation--->
       <div class ="row center">
       <div class ="col-6 center">
+         <fieldset>
+            <legend>The Original Widget</legend>
          <div class="row center">
             <div class="col-12 center">
                <h1 id="displayName">Please enter registration number</h1>
@@ -77,13 +79,15 @@
             <strong>SHOW ALL</strong>
             </button>
          </div>
-         <fieldset>
+      <fieldset>
             <legend>Registration Numbers List</legend>
             <div id="container">
                <div id="dvTable"></div>
             </div>
+         </fieldset>
+      </fieldset>
       </div>
-   </fieldset>
+   
       <!--END OF SEPARATION-->
       <!---=============================================================================================-->
       <!---=============================================================================================-->
@@ -93,10 +97,10 @@
       <!--NEW BEGINNING SEPARATION-->
       <div class="col-6 center">
          <fieldset>
-            <legend>Template Widget</legend>
+            <legend>Registration Widget With Template</legend>
          <div class="row center">
             <div class="col-12">
-               <h1 id="displayName">Please enter registration number</h1>
+               <h1 id="displayName2">Please enter registration number</h1>
             </div>
          </div>
          <div class="row center">
@@ -113,13 +117,13 @@
          <div class="row center">
             <!--            <div class="col-4"></div>-->
             <div class=" col-12 radio-toolbar">
-               <input type="radio" name="radioTown" value="CA" id="1" >
+               <input type="radio" name="radioTown2" value="CA" id="1" >
                <label for="1"> Cape Town</label>
-               <input type="radio" name="radioTown" value="CJ" id="2" >
+               <input type="radio" name="radioTown2" value="CJ" id="2" >
                <label for="2">Paarl</label>
-               <input type="radio" name="radioTown" value="CY" id="3" >
+               <input type="radio" name="radioTown2" value="CY" id="3" >
                <label for="3">Bellville</label>
-               <input type="radio" name="radioTown" value="CL" id="4" >
+               <input type="radio" name="radioTown2" value="CL" id="4" >
                <label for="4">Stellenbosch</label>
             </div>
             <!--            <div class="col-4"></div>-->
@@ -132,24 +136,24 @@
                      <!-- <span id="countNumber">No Reg-Number Registerd Yet</span> -->
                   </strong>
                </p>
-               <button id="resetBtn">Reset</button>
+               <button id="resetBtn2">Reset</button>
             </div>
          </div>
          <div class="row center">
             <button id="addBtn2" type="submit" form="form12" value="Submit">
             <strong>ADD</strong>
             </button>
-            <button id="showBtn" type="submit">
+            <button id="showBtn2" type="submit">
             <strong>SHOW</strong>
             </button>
-            <button id="showAll" type="submit">
+            <button id="showAll2" type="submit">
             <strong>SHOW ALL</strong>
             </button>
          </div>
          <fieldset>
             <legend>Registration Numbers List</legend>
-            <div id="container">
-               <div id="dvTable"></div>
+            <div id="container2">
+               <div id="dvTable2"></div>
             </div>
          </fieldset>
       </fieldset>
