--- a/handlebars templates/registration_numbers/dom_logic/index.html
+++ b/handlebars templates/registration_numbers/dom_logic/index.html
@@ -10,7 +10,7 @@
       <script type="text/x-template" class="carRegTemplate">
          {{#each regNums}}
             <button id="{{@index}}" type="submit" form="form12">
-               {{regNum2}}
+               {{regNum2}} &nbsp;
             </button>
          {{/each}}
       </script> 
