--- a/matching_days/index.html
+++ b/matching_days/index.html
@@ -17,7 +17,7 @@
           {{/each}}
          </script>
    </head>
-   <body>
+   <body class="hol">
       <div class="row">
          <div class="col-12 center">
              <h1>Matching Days</h1>
