--- a/Shoe_Catalogue/index.html
+++ b/Shoe_Catalogue/index.html
@@ -43,7 +43,7 @@
         <div class="col-3">
             <select id="shoeBrand" class="inline-block">
                 <option value="null">All Brands</option>
-                    <option class="" id="" value="Gucci">Gucci</option>
+                    <option class="" id="" value="Le Coq">Le Coq</option>
                     <option class="" id="" value="Sketchers">Sketchers</option>
                     <option class="" id="" value="Fila">Fila</option>
                     <option class="" id="" value="Adidas">Adidas</option>
