--- a/Shoe_Catalogue/index.html
+++ b/Shoe_Catalogue/index.html
@@ -17,6 +17,8 @@
             <br>Price : {{this.price}}
             <br> Stock Available : {{this.qty}}
             <br>
+            <button value={{this.id}} onclick="addToCart(this.value)">
+            </button>
         </div>
         {{/each}}
         <div>
