--- a/Shoe_Catalogue/index.html
+++ b/Shoe_Catalogue/index.html
@@ -93,6 +93,6 @@
     </div>
 </body>
 <script type="text/javascript" src="js/ShoeFactory.js"></script>
-<script type="text/javascript" src="js/ShoeDom.js"></script>
+<script type="text/javascript" src="js/shoeDom.js"></script>
 
 </html>
