--- a/matching_days/index.html
+++ b/matching_days/index.html
@@ -9,13 +9,13 @@
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
       <script type="text/x-template" id="matchingTemplate">
-          {{#each days}} {{#if this}}
+         <!-- {{#each days}} {{#if this}}
           <div class={{status}}>
               {{/if}}
               <div class="textDays box border inline-block">{{this.day}}</div>
           </div>
           {{/each}}
-         </script>
+         </script> -->
    </head>
    <body class="hol">
       <div class="row">
