Adding Animations To Shoe

--- a/Shoe_Catalogue/index.html
+++ b/Shoe_Catalogue/index.html
@@ -40,8 +40,8 @@
     </div>
 </div>
 
-<body>
-
+<body class="parent">
+    
     <div class="row search-bar">
         <div class="col-3">
             <select id="shoeBrand" class="inline-block">
@@ -91,6 +91,7 @@
     </div>
     <div id="shoesArea" class="row center">
     </div>
+        <div class="child"><H1 class="textmove">Click Search To Display Shoes</H1></div>
 </body>
 <script type="text/javascript" src="js/ShoeFactory.js"></script>
 <script type="text/javascript" src="js/shoeDom.js"></script>
