--- a/profile/index.html
+++ b/profile/index.html
@@ -18,7 +18,7 @@
     <header class="l-header">
         <nav class="nav bd-grid">
             <div>
-                <a href="#" class="nav__logo">Tebogo</a>
+                <a href="#home" class="nav__logo">Tebogo Seanego</a>
             </div>
 
             <div class="nav__menu" id="nav-menu">
