--- a/profile/index.html
+++ b/profile/index.html
@@ -69,7 +69,7 @@
                     <p class="about__text">I am a hardworking individual, a team worker and adapt easily to new working
                         environments and open to learning any new language. I started learning programming in 2019 with
                         WeThinkCode_ Cape Town which was a two year program but only spent a year with them because of
-                        family. In 2020 I then started learning SWIFT 5 by myself through UDEMY. 2021 I then started an
+                        family problems. In 2020 I then started learning SWIFT 5 by myself through UDEMY. 2021 I then started an
                         agile developer program with CodeX Cape Town which I managed to complete.</p>
                 </div>
             </div>
